--- a/MLlab.ipynb
+++ b/MLlab.ipynb
@@ -2708,19 +2708,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **FEARTURE SELECTION**"
+        "WEEK **3**"
       ],
       "metadata": {
-        "id": "GKAzzq1wo0zS"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**contant features**"
-      ],
-      "metadata": {
-        "id": "fRNfCyVpxqsZ"
+        "id": "hrA5fqgP5JnB"
       }
     },
     {
@@ -2795,15 +2786,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Quasi-Constant Feature**"
-      ],
-      "metadata": {
-        "id": "efhsU0rgxvAw"
-      }
     },
     {
       "cell_type": "code",
@@ -3282,15 +3264,6 @@
           "execution_count": 2
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "***ANOVA***"
-      ],
-      "metadata": {
-        "id": "mHK2dNRfj4iI"
-      }
     },
     {
       "cell_type": "code",
@@ -3830,7 +3803,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#example program demonstrates linear regression without dataset\n",
+        "\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.linear_model import LinearRegression\n",
         "import pandas as pd\n",
@@ -4747,17 +4720,14 @@
       "cell_type": "code",
       "source": [
         "# X = data[['YrSold']].values\n",
-        "df = pd.read_csv('/content/house_price_train (2).csv')\n",
+        "df = pd.read_csv('/content/house_price_train.csv')\n",
         "df.describe()\n",
         "df.head()\n",
         "X = data[['LotArea']].values\n",
         "y = data['SalePrice'].values\n",
-        "\n",
         "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.2,random_state=42)\n",
-        "\n",
         "lr = LinearRegression()\n",
         "lr.fit(X_train,y_train)\n",
-        "\n",
         "y_pred=lr.predict(X_test)\n",
         "print(\"Slope : \",lr.coef_[0])\n",
         "print(\"Intercept : \",lr.intercept_)\n",
@@ -4833,7 +4803,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt # Changed import here\n",
         "from sklearn.metrics import mean_squared_error,mean_absolute_error,r2_score\n",
-        "df = pd.read_csv('/content/house_price_train (2).csv')\n",
+        "df = pd.read_csv('/content/house_price_train.csv')\n",
         "df.describe()\n",
         "df.head()\n",
         "data = df[['LotArea','YearBuilt','OverallQual','SalePrice']].dropna()\n",
@@ -4897,24 +4867,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "9dRqViEPTMS9"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "***Logistic Regression***"
-      ],
-      "metadata": {
-        "id": "0mcNPL1_EU8m"
-      }
     },
     {
       "cell_type": "code",
@@ -5015,24 +4967,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "2_QBhogeMBan"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "***Polynomial Non linear regression***"
-      ],
-      "metadata": {
-        "id": "w7c6dceMRtFX"
-      }
     },
     {
       "cell_type": "code",
@@ -5180,18 +5114,13 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# #Write a program that applies the PCA technique to any dataset\n",
-        "# (a) Standardize the variables in the dataset. Why is this step necessary before performing a PCA?\n",
-        "# (b) Create a scatter plot from the transformed data, with PC1 and PC2 as the axes.\n",
-        "# (c) Which variables are the most important for PC1 and PC2? Why?\n",
-        "# (d) What percentage of the variance in the dataset is explained by PC1 and PC2?\n",
-        "# (e) How many PCs are able to explain more than 80% of the total variance within the data set?"
-      ],
+      "cell_type": "code",
+      "source": [],
       "metadata": {
-        "id": "k42W8Mg5vz9C"
-      }
+        "id": "z263Smhh7_7z"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
